--- a/src/styles.css
+++ b/src/styles.css
@@ -130,20 +130,13 @@ body {
   color: #999;
 }
 
-.new-todo {
+button {
+  background-color: transparent;
   padding: 5px 15px;
   margin: 1rem 0 1rem;
   border-radius: 5px;
-
-  background-color: transparent;
-  border: 2px solid #424242;
-
-  font-size: 0.9rem;
-
-  cursor: pointer;
 }
 
-.new-todo:hover {
-  border-color: #999;
-  color: #666;
+button:hover {
+  transform: scale(1.05);
 }
