--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   background-color: #f8f8f8;
   color: #333;
   line-height: 1.6;
